start mobile version

--- a/src/portfolio-item.html
+++ b/src/portfolio-item.html
@@ -73,7 +73,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="/portfolio.html">Портфолио</a></li>
+                            <li class="active"><a href="/portfolio.html">Портфолио</a></li>
                             <li><a href="/blog.html">Блог</a></li>
                             <li><a href="/contacts.html">Контакты</a></li>
                         </ul>
@@ -89,18 +89,120 @@
         </div>
     </header>
 
-    <section class="not__found">
+    <section class="breadcrumbs with__bg">
         <div class="bg__box"></div>
         <div class="container">
             <div class="row">
-                <div class="col-9">
-                    <div class="not__found-box">
-                        <img src="./img/in_404.svg" alt="не найдено">
-                        <div>УПС</div>
-                        <div>404</div>
-                        <span>Страница не найдена</span>
+                <div class="col-10">
+                    <ul>
+                        <li><a href="#">Главная</a></li>
+                        <li><a href="#">Услуги</a></li>
+                        <li><a href="#">Создание сайта</a></li>
+                        <li>Интернет магазин</li>
+                    </ul>
+                    <h1>Создание интернет магазина Медведь и слон</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-10">
+                    <div class="tags black">
+                        <span>контекст</span>
+                        <span>SEO</span>
                     </div>
-                    <a href="/" class="btn_404">Перейти назад</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-10">
+                    <h2>Задача</h2>
+                    <p>Что под этим подразумеваем: большое количество дублей страниц, которые уже проиндексировал поисковик, непонятная иерархия страниц, отсутствие карты сайта, большое количество битых ссылок, сайт часто недоступен, много вплывающей рекламы.</p>
+
+                    <img src="./img/mis/portfolio_mis.jpg" alt="">
+
+                    <h2>Задача</h2>
+                    <p>Что под этим подразумеваем: большое количество дублей страниц, которые уже проиндексировал поисковик, непонятная иерархия страниц, отсутствие карты сайта, большое количество битых ссылок, сайт часто недоступен, много вплывающей рекламы.</p>
+                    <img src="./img/mis/portfolio_mis-2.jpg" alt="">
+
+                    <h3>Описание процесса</h3>
+                    <p>Что под этим подразумеваем: большое количество дублей страниц, которые уже проиндексировал поисковик, непонятная иерархия страниц, отсутствие карты сайта, большое количество битых ссылок, сайт часто недоступен, много вплывающей рекламы.</p>
+
+                    <img src="./img/mis/portfolio_mis-3.jpg" alt="">
+
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <section class="grey">
+        <div class="container">
+            <div class="row">
+                <div class="col-10">
+                    <a class="btn__link-project" target="_blank">
+                        medvedislon.com
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-10">
+                    <div class="row">
+                        <div class="col-6 center">
+                            <a class="prev__project">
+                                Предыдущий проект
+                            </a>
+                        </div>
+                        <div class="col-6 center">
+                            <a class="next__project">
+                                Следующий проект
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="order__form">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div class="as__h1">Заказать сайт</div>
+                    <div class="sub__title">Вы можете бесплатно  получить аудит вашего сайта. Вас это не к чему не обязывает.</div>
+
+                    <form action="#" method="post">
+                        <div class="single__block">
+                            <input type="text" name="name" placeholder="Ваше имя" autocomplete="off">
+                        </div>
+                        <div class="single__block">
+                            <input type="email" name="email" placeholder="Номер телефона" autocomplete="off">
+                        </div>
+                        <div class="single__block">
+                            <input type="text" name="phone" placeholder="Email" autocomplete="off">
+                        </div>
+                        <div class="single__block message">
+                            <textarea name="message" id="message" placeholder="Дополнительная информация"></textarea>
+                        </div>
+                        <div class="single__block agree__block">
+                            <input type="checkbox" name="agree" id="i_agree2" value="1" checked>
+                            <label for="i_agree2">Отправляя заяявку  вы соглашаетесь с <a href="#" title="Перейти на страницу описания">правилами офферты</a></label>
+                        </div>
+                        <div class="single__block submit__block">
+                            <input type="submit" value="Отправить">
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
