--- a/src/contacts.html
+++ b/src/contacts.html
@@ -73,7 +73,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="#">Портфолио</a></li>
+                            <li><a href="/portfolio.html">Портфолио</a></li>
                             <li><a href="/blog.html">Блог</a></li>
                             <li class="active"><a href="/contacts.html">Контакты</a></li>
                         </ul>
