--- a/src/usluga.html
+++ b/src/usluga.html
@@ -73,7 +73,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="#">Портфолио</a></li>
+                            <li><a href="/portfolio.html">Портфолио</a></li>
                             <li><a href="/blog.html">Блог</a></li>
                             <li class="active"><a href="/contacts.html">Контакты</a></li>
                         </ul>
@@ -115,6 +115,17 @@
                     <p>Поскольку главная задача сайта – это заинтересовать посетителя и перевести в список потенциальных клиентов, то созданием интернет-ресурса должен заниматься профессионал. Множество шаблонов во всемирной паутине дают возможность рядовому пользователю создать сайт буквально в течение нескольких минут. Но без грамотного оформления и оптимизации данных такой ресурс останется «пустышкой» и не принесет прибыли. Основными функциями сайта можно считать: имидж; коммуникация; реклама; информативность; маркетинг. Потенциальный покупатель должен понять, чем занимается компания, поэтому следует предоставить максимальное количество информации на сайте.</p>
                     <h2>Почему стоит заказать создание сайта в студии "Красбер"?</h2>
                     <p>С помощью рекламы можно рассказать о сервисах, услугах, товарах, а форма обратной связи служит для общения с заказчиками. Чтобы оперативно информировать пользователей о новых товарах и услугах, следует позаботиться о привлекательном дизайне. С помощью акций и опросов можно осуществлять продажи в режиме онлайн. Анализируя вопросы, которые задают покупатели, можно понять, на какую группу товаров есть спрос или какой информации не хватает на сайте. Благодаря размещению тематических статей, сертификатов, отзывов, вы получите полноценный сайт для развития бизнеса.</p>
+                    <h3>FAQ</h3>
+                    <ul class="faq">
+                        <li>
+                            <div class="q">Что такое seo-продвижение и как его мажут на хлебушЫк?</div>
+                            <div class="a">С помощью рекламы можно рассказать о сервисах, услугах, товарах, а форма обратной связи служит для общения с заказчиками. Чтобы оперативно информировать пользователей о новых товарах и услугах, следует позаботиться о привлекательном дизайне. С помощью акций и опросов можно осуществлять продажи в режиме онлайн. Анализируя вопросы, которые задают покупатели, можно понять, на какую группу товаров есть спрос или какой информации не хватает на сайте. Благодаря размещению тематических статей, сертификатов, отзывов, вы получите полноценный сайт для развития бизнеса.</div>
+                        </li>
+                        <li>
+                            <div class="q">Как не попасть под фильтры, а?</div>
+                            <div class="a">С помощью рекламы можно рассказать о сервисах, услугах, товарах, а форма обратной связи служит для общения с заказчиками. Чтобы оперативно информировать пользователей о новых товарах и услугах, следует позаботиться о привлекательном дизайне. С помощью акций и опросов можно осуществлять продажи в режиме онлайн. Анализируя вопросы, которые задают покупатели, можно понять, на какую группу товаров есть спрос или какой информации не хватает на сайте. Благодаря размещению тематических статей, сертификатов, отзывов, вы получите полноценный сайт для развития бизнеса.</div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -144,7 +155,7 @@
                                     <li>возможность установки дополнительных сервисов</li>
                                     <li>онлайн расчет стоимости</li>
                                 </ul>
-                                <a href="#" class="btn green">Заказать</a>
+                                <a href="#" class="btn green call__popup">Заказать</a>
                             </div>
                         </div>
                         <div class="tariff type-two col-4">
@@ -163,7 +174,7 @@
                                     <li>возможность установки дополнительных сервисов</li>
                                     <li>онлайн расчет стоимости</li>
                                 </ul>
-                                <a href="#" class="btn green">Заказать</a>
+                                <a href="#" class="btn green call__popup">Заказать</a>
                             </div>
                         </div>
                         <div class="tariff type-three col-4">
@@ -182,7 +193,7 @@
                                     <li>возможность установки дополнительных сервисов</li>
                                     <li>онлайн расчет стоимости</li>
                                 </ul>
-                                <a href="#" class="btn green">Заказать</a>
+                                <a href="#" class="btn green call__popup">Заказать</a>
                             </div>
                         </div>
                     </div>
@@ -574,6 +585,58 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup">
+        <div class="container">
+            <div class="row">
+                <div class="col-10">
+                    <div class="order__service-form">
+                        <div class="close__box">
+                            <svg class="icon close">
+                                <use xlink:href="./img/symbols.svg#close"></use>
+                            </svg>
+                        </div>
+                        <div class="wrap">
+                            <div class="desc">
+                                <div class="as__h1">Заказать услугу</div>
+                                <p>Вы можете бесплатно  получить аудит вашего сайта. Вас это не к чему не обязывает.</p>
+                            </div>
+                            <div class="form__box">
+                                <form action="#" class="order__service" method="post">
+                                    <div class="services__list-block single__block">
+                                        <select name="service" id="service__field">
+                                            <option>Базовый</option>
+                                            <option>Стандарт</option>
+                                            <option>Премиум</option>
+                                        </select>
+                                        <i class="select__arrow"></i>
+                                    </div>
+                                    <div class="single__block">
+                                        <input type="text" name="name" placeholder="Ваше имя" autocomplete="off">
+                                    </div>
+                                    <div class="single__block">
+                                        <input type="text" name="phone" placeholder="Номер телефона" autocomplete="off">
+                                    </div>
+                                    <div class="single__block">
+                                        <input type="email" name="email" placeholder="Email" autocomplete="off">
+                                    </div>
+                                    <div class="single__block">
+                                        <input type="submit" value="Отправить">
+                                    </div>
+                                    <div class="single__block agree__block">
+                                        <input type="checkbox" name="agree" id="i_agree" value="1" checked>
+                                        <label for="i_agree">Отправляя заяявку  вы соглашаетесь с <a href="#">правилами офферты</a></label>
+                                    </div>
+                                </form>
+                                <!-- /.order__service -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="popup__show-bg"></div>
 
     <script src="js/app.min.js"></script>
     </body>
