--- a/src/article.html
+++ b/src/article.html
@@ -97,7 +97,7 @@
                     <ul>
                         <li><a href="/">Главная</a></li>
                         <li><a href="/blog.html">Блог</a></li>
-                        <li>7 способов попасть под фильтры в поисковых системах</li>
+                        <li>7 способов попасть под фильтры</li>
                     </ul>
                     <h1>7 способов попасть под фильтры в поисковых системах</h1>
                 </div>
@@ -137,69 +137,29 @@
                                 </div>
                             </article>
                         </div>
-                        <div class="col-4">
+                        <div class="col-4 hidden__xs">
                             <div class="ad">
                                 <div class="text">Реклама</div>
                             </div>
                             <aside class="other__articles">
                                 <div class="title">ЧИТАЙТЕ ПО ТЕМЕ</div>
-                                <div class="row">
-                                    <div class="col-4">
+                                <div class="other__articles-row">
+                                    <div class="other__articles-image">
                                         <figure>
                                             <img src="./img/article_another.png" alt="alt">
                                         </figure>
                                     </div>
-                                    <div class="col-8">
+                                    <div class="other__articles-name">
                                         <div class="name">Где заказать сайт: фриланс или веб-студия</div>
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-4">
+                                <div class="other__articles-row">
+                                    <div class="other__articles-image">
                                         <figure>
                                             <img src="./img/article_another.png" alt="alt">
                                         </figure>
                                     </div>
-                                    <div class="col-8">
-                                        <div class="name">Где заказать сайт: фриланс или веб-студия</div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-4">
-                                        <figure>
-                                            <img src="./img/article_another.png" alt="alt">
-                                        </figure>
-                                    </div>
-                                    <div class="col-8">
-                                        <div class="name">Где заказать сайт: фриланс или веб-студия</div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-4">
-                                        <figure>
-                                            <img src="./img/article_another.png" alt="alt">
-                                        </figure>
-                                    </div>
-                                    <div class="col-8">
-                                        <div class="name">Где заказать сайт: фриланс или веб-студия</div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-4">
-                                        <figure>
-                                            <img src="./img/article_another.png" alt="alt">
-                                        </figure>
-                                    </div>
-                                    <div class="col-8">
-                                        <div class="name">Где заказать сайт: фриланс или веб-студия</div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-4">
-                                        <figure>
-                                            <img src="./img/article_another.png" alt="alt">
-                                        </figure>
-                                    </div>
-                                    <div class="col-8">
+                                    <div class="other__articles-name">
                                         <div class="name">Где заказать сайт: фриланс или веб-студия</div>
                                     </div>
                                 </div>
@@ -211,7 +171,7 @@
         </div>
     </main>
 
-    <section>
+    <section class="hidden__xs">
         <div class="container">
             <div class="row">
                 <div class="col-10">
