--- a/src/usluga.html
+++ b/src/usluga.html
@@ -144,6 +144,9 @@
                                 <div class="name">Базовый</div>
                                 <div class="line"></div>
                                 <div class="price">от 5 000 р.</div>
+                                <svg class="icon arrow_down">
+                                    <use xlink:href="./img/symbols.svg#arrow_down"></use>
+                                </svg>
                             </div>
                             <div class="body">
                                 <ul>
@@ -163,6 +166,9 @@
                                 <div class="name">Стандарт</div>
                                 <div class="line"></div>
                                 <div class="price">от 5 000 р.</div>
+                                <svg class="icon arrow_down">
+                                    <use xlink:href="./img/symbols.svg#arrow_down"></use>
+                                </svg>
                             </div>
                             <div class="body">
                                 <ul>
@@ -182,6 +188,9 @@
                                 <div class="name">Премиум</div>
                                 <div class="line"></div>
                                 <div class="price">от 5 000 р.</div>
+                                <svg class="icon arrow_down">
+                                    <use xlink:href="./img/symbols.svg#arrow_down"></use>
+                                </svg>
                             </div>
                             <div class="body">
                                 <ul>
@@ -202,7 +211,7 @@
         </div>
     </section>
 
-    <section class="services_prices">
+    <section class="services__prices">
         <div class="container">
             <div class="row">
                 <div class="col-10">
@@ -211,75 +220,48 @@
                         <div class="col-8">
                             <div class="price__table">
                                 <div class="title">Разработка web-сайтов</div>
-                                <div class="row">
-                                    <div class="col-6">
-                                        <div class="service__name">Landing page</div>
-                                    </div>
-                                    <div class="col-6">
-                                        <div class="price">от 9500</div>
-                                    </div>
+                                <div class="row__price">
+                                    <div class="service__name">Landing page</div>
+                                    <div class="price">от 9500</div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-6">
-                                        <div class="service__name">Многостраничный шаблонный сайт</div>
-                                    </div>
-                                    <div class="col-6">
-                                        <div class="price">от 11500</div>
-                                    </div>
+                                <div class="row__price">
+                                    <div class="service__name">Многостраничный шаблонный сайт</div>
+                                    <div class="price">от 11500</div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-6">
-                                        <div class="service__name">Landing page</div>
-                                    </div>
-                                    <div class="col-6">
-                                        <div class="price">от 9500</div>
-                                    </div>
+                                <div class="row__price">
+                                    <div class="service__name">Landing page</div>
+                                    <div class="price">от 9500</div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-6">
-                                        <div class="service__name">Многостраничный шаблонный сайт</div>
-                                    </div>
-                                    <div class="col-6">
-                                        <div class="price">от 11500</div>
-                                    </div>
+                                <div class="row__price">
+                                    <div class="service__name">Многостраничный шаблонный сайт</div>
+                                    <div class="price">от 11500</div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-6">
-                                        <div class="service__name">Landing page</div>
-                                    </div>
-                                    <div class="col-6">
-                                        <div class="price">от 9500</div>
-                                    </div>
+                                <div class="row__price">
+                                    <div class="service__name">Landing page</div>
+                                    <div class="price">от 9500</div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-6">
-                                        <div class="service__name">Landing page</div>
-                                    </div>
-                                    <div class="col-6">
-                                        <div class="price">от 9500</div>
-                                    </div>
+                                <div class="row__price">
+                                    <div class="service__name">Landing page</div>
+                                    <div class="price">от 9500</div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-6">
-                                        <div class="service__name">Многостраничный шаблонный сайт</div>
-                                    </div>
-                                    <div class="col-6">
-                                        <div class="price">от 11500</div>
-                                    </div>
+                                <div class="row__price">
+                                    <div class="service__name">Многостраничный шаблонный сайт</div>
+                                    <div class="price">от 11500</div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-6">
-                                        <div class="service__name">Доработка сайта</div>
-                                    </div>
-                                    <div class="col-6">
-                                        <div class="price">1 000 час работы программиста</div>
-                                    </div>
+                                <div class="row__price">
+                                    <div class="service__name">Доработка сайта</div>
+                                    <div class="price">1 000 час работы программиста</div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-4">
                             <div class="info__box">
-                                <div class="title">Сроки реализации проекта:</div>
+                                <div class="title">
+                                    Сроки реализации проекта:
+                                    <svg class="icon arrow_down">
+                                        <use xlink:href="./img/symbols.svg#arrow_down"></use>
+                                    </svg>
+                                </div>
                                 <div class="body">
                                     <ul class="circle">
                                         <li>Сроки создания шаблонного сайта в течение 1 недель.</li>
@@ -290,7 +272,12 @@
                                 </div>
                             </div>
                             <div class="info__box">
-                                <div class="title">Порядок оплаты:</div>
+                                <div class="title">
+                                    Порядок оплаты:
+                                    <svg class="icon arrow_down">
+                                        <use xlink:href="./img/symbols.svg#arrow_down"></use>
+                                    </svg>
+                                </div>
                                 <div class="body">
                                     <ul class="circle">
                                         <li>50% предоплата вносится после согласования взаимных договоренностей и проекта.</li>
